# MyEarth-orchestrator

./: .dockerignore  .gitignore  .gitmodules  .replit  .replit.toml  .replit_deployment  COMMIT_MESSAGES.md  DEPLOYMENT.md  DEPLOYMENT_FIX.txt  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  FILES_CHANGED.md  FREEMIUM_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  Info My Earth 250809.rtf  OAUTH_SETUP_GUIDE 2.md  OAUTH_SETUP_GUIDE.md  PrintOverlay.js  README.md  README_AUTH_IMPLEMENTATION.md  README_GIZMO.md  README_USER_FEATURES.md  SETUP_REFERENCE.md  __init__.py  auth.py  create_simple_model.py  database.py  debug-ssh.sh  deploy.sh  deploy.yaml  deployment-readme.md  env.example  fix-deployment.sh  fix-nginx-manual.sh  fix-server-repo.sh  fix-tailscale-ssh.sh  gizmo_demo.html  index.html  init_db.py  layer_api.py  (+24 more)
attached_assets/: Pasted-Build-a-Complete-Map-Export-Tool-with-Print-Preview-geo-admin-style-Please-develop-a-professional--1752754422288_1752754422289.txt  Pasted-We-re-preparing-this-project-for-deployment-on-a-real-server-where-we-ll-be-using-PostgreSQL-with-t-1752783436905_1752783436907.txt
cesiumjs_geospatial_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: OAUTH_SETUP_GUIDE.md  README.md  README_PRINT.md  README_USER_FEATURES.md  RUN.md
frontend/: CesiumGizmo.js  CesiumModelImporter.js  arcgis.html  index.html  model-test.html  printOverlayStyles.css  printService.js
infrastructure/: app.yaml  myearth.service
routers/: data.py
scripts/: fix-nginx-manual.sh  fix-sudo-permissions.sh  update_remote_server.sh
uploads/: 31_07_2025.glb  (+3 more)
(+11 files in other folders)
